花火大会プラグインを本格仕様に拡張
打ち上げ地点の登録、時系列演出(sequence)ショーシステム、開始前カウント
ダウン、歓声演出、GUIコントロールパネル、ステータス確認コマンドを追加。
メッセージ・ショー定義を専用YAMLファイルに分離し設定の柔軟性を向上。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YUGt5BEwiFAwKCx3qmuU8u